--- a/app/templates/components/rental-listing.hbs
+++ b/app/templates/components/rental-listing.hbs
@@ -21,4 +21,5 @@
       <span>Number of bedrooms:</span> {{rental.bedrooms}}
     </div>
   </div>
+  {{location-map location=rental.city}}
 </article>
