error en ajax de el mapa

--- a/app/templates/rentals/index.hbs
+++ b/app/templates/rentals/index.hbs
@@ -1,6 +1,6 @@
 {{#list-filter
-  filter=(action "filterByCity") as 
-  |filteredResults|
+  filter=(action "filterByCity") 
+as |filteredResults|
 }}
   <ul class="results">
     {{#each filteredResults as |rentalUnit|}}
